--- a/Eventer.Client/index.html
+++ b/Eventer.Client/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eventer</title>
 </head>
-  <body>
+  <body style="background-color:#f0f0f0">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
